# pythonfy

./: .env  .env-example  .gitignore  pyproject.toml
pythonfy/: .cache  app.py  build.py  client.py  main.py  myapp.py
pythonfy/dominio/: context_uri.py  playback.py  playback_interface.py  playlist_playback.py  queue_playback.py  spotify.py  spotify_user.py  spotipy.py
pythonfy/dominio/search_types/: __init__.py  artist_search.py  search.py  search_type_interface.py  track_search.py
pythonfy/exeptions/: invalid_param_exeption.py
pythonfy/templates/: home.html
